--- a/templates/checkouts/new_WIP.html
+++ b/templates/checkouts/new_WIP.html
@@ -37,7 +37,7 @@
   var form = document.querySelector('#payment-form');
   var amount = document.querySelector('#amount').value;
   var client_token = '{{ client_token }}';
-
+  console.log("amount" + amount);
   braintree.dropin.create({
     authorization: client_token,
     container: '#bt-dropin',
